replace ImmutableList.of with List.of
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>