@@ -47,19 +47,19 @@ class VirtualCaseTest extends AbstractProjectFileTest {
 
     @Override
     protected List<FileExtension> getFileExtensions() {
-        return ImmutableList.of(new CaseExtension(createImportersLoader()));
+        return List.of(new CaseExtension(createImportersLoader()));
     }
 
     @Override
     protected List<ProjectFileExtension> getProjectFileExtensions() {
-        return ImmutableList.of(new ImportedCaseExtension(createImportersLoader(), new ImportConfig()),
+        return List.of(new ImportedCaseExtension(createImportersLoader(), new ImportConfig()),
                                 new ModificationScriptExtension(),
                                 new VirtualCaseExtension());
     }
 
     @Override
     protected List<ServiceExtension> getServiceExtensions() {
-        return ImmutableList.of(new LocalNetworkCacheServiceExtension());
+        return List.of(new LocalNetworkCacheServiceExtension());
     }
 
     @BeforeEach
